--- a/main.tex
+++ b/main.tex
@@ -270,7 +270,7 @@ FastAPI
 {}
 {\jobtitle{}Good programming skills in Python, JAVA and C.}
 \entry{}
-{Knowledge of Git Version Control System}{}
+{Knowledge of Git and Heroku}{}
 {\jobtitle{}My all project repository are available on Github. }
 \entry{}
   {Quick Learning Capability }
